--- a/contracts/programs/bubblegum/Cargo.toml
+++ b/contracts/programs/bubblegum/Cargo.toml
@@ -16,8 +16,8 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = { version = "0.25.0", features = [ "init-if-needed" ] }
-anchor-spl = { version = "0.25.0" }
+anchor-lang = { git = "https://github.com/GenesysGo/anchor", branch = "tracy/test-validator-geyser-config-and-spl-version" }
+anchor-spl = { git = "https://github.com/GenesysGo/anchor", branch = "tracy/test-validator-geyser-config-and-spl-version" }
 spl-token = { version = "3.3.0", features = [ "no-entrypoint" ] }
 spl-associated-token-account = { version = "1.0.5", features = [ "no-entrypoint" ] }
 mpl-token-metadata = { version = "1.3.3", features = ["no-entrypoint"] }
