--- a/contracts/programs/gummyroll/Cargo.toml
+++ b/contracts/programs/gummyroll/Cargo.toml
@@ -16,7 +16,7 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = { version="0.25.0" }
+anchor-lang = { git = "https://github.com/GenesysGo/anchor", branch = "tracy/test-validator-geyser-config-and-spl-version" }
 bytemuck = "1.8.0"
 concurrent-merkle-tree = { path="../../../lib/concurrent-merkle-tree", features = [ "sol-log" ]}
 candy-wrapper = { path="../candy-wrapper", features = [ "no-entrypoint" ]}
