--- a/contracts/package.json
+++ b/contracts/package.json
@@ -1,12 +1,12 @@
 {
   "devDependencies": {
+    "@solana/spl-token": "^0.1.8",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
     "chai": "^4.3.4",
     "mocha": "^9.0.3",
     "ts-mocha": "^10.0.0",
-    "typescript": "^4.3.5",
-    "@solana/spl-token": "^0.1.8"
+    "typescript": "^4.3.5"
   },
   "scripts": {
     "build": "anchor build",
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@metaplex-foundation/mpl-token-metadata": "^2.2.2",
+    "@project-serum/anchor": "^0.25.0",
     "typescript-collections": "^1.3.3"
   }
 }
