--- a/contracts/programs/sugar-shack/Cargo.toml
+++ b/contracts/programs/sugar-shack/Cargo.toml
@@ -16,8 +16,8 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = { version = "0.25.0" }
-anchor-spl = { version = "0.25.0" }
+anchor-lang = { git = "https://github.com/GenesysGo/anchor", branch = "tracy/test-validator-geyser-config-and-spl-version" , features = ["init-if-needed"]}
+anchor-spl = { git = "https://github.com/GenesysGo/anchor", branch = "tracy/test-validator-geyser-config-and-spl-version" }
 solana-safe-math = "0.1.0"
 mpl-token-metadata = { git = "https://github.com/jarry-xiao/metaplex-program-library", rev="7e2810a", features = [ "no-entrypoint" ] }
 bubblegum = { path = "../bubblegum", features = ["cpi"] }
