--- a/contracts/programs/bubblegum/Cargo.toml
+++ b/contracts/programs/bubblegum/Cargo.toml
@@ -23,6 +23,7 @@ spl-associated-token-account = { version = "1.1.1", features = [ "no-entrypoint"
 mpl-token-metadata = { version = "1.3.6", features = ["no-entrypoint"] }
 gummyroll = { path = "../gummyroll", features = ["cpi"] }
 bytemuck = "1.8.0"
+# spl-compression = { git = "https://github.com/GenesysGo/solana-program-library", branch = "tracy/version-updates", features = ["cpi"] }
 
 [profile.release]
 overflow-checks = true
